<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_two">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sandwich2" />

    <TextView
        android:id="@+id/filling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peach"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/add_on"
        android:textColor="@color/brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView1" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filling">

        <RadioButton
            android:id="@+id/addon1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="60dp"
            android:text="@string/tea" />

        <RadioButton
            android:id="@+id/addon2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/coffee" />

        <RadioButton
            android:id="@+id/addon3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/french_fries" />
    </RadioGroup>

    <ImageView
        android:id="@+id/sandwich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        app:srcCompat="@drawable/sandwich_icon" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_marginStart="15dp"
        android:background="@color/peach"
        app:layout_constraintLeft_toRightOf="@id/sandwich"
        app:layout_constraintTop_toTopOf="@id/sandwich" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:text="@string/total"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/sandwich"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/rm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/rm_0_00"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/total"
        app:layout_constraintTop_toTopOf="@id/total" />

    <View
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/peach"
        app:layout_constraintBottom_toBottomOf="@id/sandwich"
        app:layout_constraintLeft_toRightOf="@id/sandwich" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="sandwich"
        tools:layout_editor_absoluteX="81dp" />

    <ImageButton
        android:id="@+id/place_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:srcCompat="@drawable/button_order" />

    <ImageButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/place_order_button"
        app:layout_constraintTop_toTopOf="@id/place_order_button"
        app:srcCompat="@drawable/button_reset"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="back"
        android:background="@color/brown"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>